Fix header alignment.

--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,16 @@ body {
   width: 95%;
   margin-bottom: 4rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  text-align: center;
+}
+
+@media (min-width: 730px) {
+  .app-header {
+    flex-direction: row;
+  }
 }
 
 .error {
